Fix long strings wrap error

--- a/kanban_app/static/styles/style.css
+++ b/kanban_app/static/styles/style.css
@@ -135,6 +135,8 @@ h2 {
     gap: 5px;
     padding: 10px;
     width: 100%;
+    word-wrap: break-word;
+    overflow: scroll;
 }
 
 .title {
